# MathEpiDeepLearningTutorial

./: .gitignore  README.md
Algebra/: PardisoTesr.jl
Benchmarks/: JuliaPythonCBench.jl  JuliaPythonCBench.py  juliagpubenchmark.ipynb  juliahpcbenchmark.ipynb
CPP/Hello/: CMakeLists.txt  (+1 more)
DataDrivenMethodsTutorial/: Sindy_SIR.jl  media_impact_function_symbolic_regression.jl
DiffEqFluxTutorial/: Neural_epi_models.ipynb  SIR.ipynb  Tensorlayer_test.jl
EmsembleTutorial/: emsemble_uncertaity.jl
FluxTutorial/: FLuxBasis.ipynb  learning_ability.ipynb  why_neuralDE.ipynb
MyjuliaEnv/: pyproject.toml  startup.jl  startup_ijulia.jl
MyjuliaEnv/BIDIff/: Manifest.toml  Project.toml
MyjuliaEnv/Data_Driven/: Manifest.toml  Project.toml
MyjuliaEnv/FracDiff/: Project.toml
MyjuliaEnv/GNN/: Manifest.toml  Project.toml
MyjuliaEnv/ML/: Manifest.toml  Project.toml
MyjuliaEnv/NetPack/: Project.toml
MyjuliaEnv/NeuralPDE/: Manifest.toml  Project.toml
MyjuliaEnv/Opt/: Manifest.toml  Project.toml  readme.txt
MyjuliaEnv/SpecialUses/FracDiff/: Manifest.toml
MyjuliaEnv/SpecialUses/NetPack/: Manifest.toml  Project.toml
MyjuliaEnv/SpecialUses/Networks/: Manifest.toml  Project.toml
MyjuliaEnv/SpecialUses/RL/: Manifest.toml  Project.toml
MyjuliaEnv/Turing/: Manifest.toml  Project.toml
MyjuliaEnv/v1.6/: Manifest.toml  Project.toml
MyjuliaEnv/v1.7/: Manifest.toml  Project.toml
OptimizationTutorial/: GalaticOptim.ipynb  Optimal_method.ipynb
PDE/: DiffEqOperator.ipynb
WechatCollections/: MLAPP第二版.md  MathEpiDeepLearning更新.md  Mathepia Ecosystem Update20220227.md  Why Julia.md  取暖攻略.md  科研技巧文献检索与综述.md  科研技巧文献管理与追踪.md
(+46 files in other folders)
