[tool.poetry]
name = "mathepia"
version = "0.1.0"
description = ""
authors = ["Pengfei Song <aidishage@gmail.com>"]

[tool.poetry.dependencies]
python = " >=3.9,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
sympy = "^1.10.1"
statsmodels = "^0.13.2"
networkx = "^2.8.4"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
jupyterlab = "^3.4.3"
tensorflow = "^2.9.1"
SALib = "^1.4.5"
DeepXDE = "^1.5.1"
streamlit = "^1.10.0"
streamlit-pandas-profiling = "^0.1.3"
pandas-profiling = "^3.2.0"
plotly-express = "^0.4.1"
tensorflow-probability = "^0.17.0"
gplearn = "^0.4.2"
gpflow = "^2.5.2"
gpytorch = "^1.6.0"
pytorch-forecasting = "^0.10.2"
neuralprophet = "^0.3.2"
torchdyn = "^1.0.1"
torchgan = "^0.1.0"
torchsde = "^0.2.5"
torchcde = "^0.2.5"
torchdiffeq = "^0.2.3"
torchmetrics = "^0.9.1"
pytorch-lightning = "^1.6.4"
pyro-ppl = "^1.8.1"
sbi = "^0.18.0"
pints = "^0.4.0"
elfi = "^0.8.4"
POT = "^0.8.2"
lifelines = "^0.27.0"
PuLP = "^2.6.0"
lmfit = "^1.0.3"
pysindy = "^1.7"
pysr = "^0.9.1"
pydmd = "^0.4.0"
cvxpy = "^1.2.1"
probnum = "^0.1.19"
pyecharts = "^1.9.1"
plotly = "^5.8.2"
dash = "^2.5.1"
jupyter-contrib-nbextensions = "^0.5.1"
flake8 = "^4.0.1"
yapf = "^0.32.0"
pylint = "^2.14.2"

[tool.poe.tasks]
torchinstall = "python -m pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
